# atomic_habits

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  tasks.py  urls.py  utils.py
habits/: models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_alter_habit_time_to_complete.py  0004_alter_habit_related_habit.py
user/: models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_user_pk.py
